--- a/style.css
+++ b/style.css
@@ -2,13 +2,31 @@ html *{
     box-sizing: border-box;
 }
 
+html, body{
+    min-height: 100%;
+    height: 100%;
+}
+
 body{
     background-color: var(--bg-color);
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.5;
     margin: 0;
-    padding: 2rem;
+    padding: 0;
+}
+
+header{
+    background-color: var(--g-color);
+    background: radial-gradient(ellipse, rgba(34,193,195,1) 0%, rgba(67,199,186,1) 22%, rgba(99,164,195,1) 49%, rgba(160,155,212,1) 100%);
+    color: var(--bg-color-claro);
+    padding: 1rem;
+    height: 40%;
+    min-height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0.6rem 1.1rem rgba(0, 0, 0, 0.150);
 }
 
 body > div{
@@ -17,14 +35,23 @@ body > div{
 
 .box {
     display: flex;
+    justify-content: space-around;
     flex-wrap: wrap;
+    padding: 1rem 5rem;
 }
 
 .box > div{
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 0.25rem;
-    padding: 1rem;
+    /*border: 1px solid rgba(0, 0, 0, 0.2);*/
+    /*border-width: 4px;
+    border-style: solid;
+    border-image: linear-gradient(160deg, rgba(34,193,195,1) 0%, rgba(67,199,186,1) 22%, rgba(99,164,195,1) 49%, rgba(160,155,212,1) 100%) 1;
+    border-radius: 0.25rem;*/
+    padding: 1rem 1rem 0.1rem 1rem;
     margin: 0.5rem;
+    background: linear-gradient(white, white) padding-box, linear-gradient(160deg, rgba(34,193,195,1) 0%, rgba(67,199,186,1) 22%, rgba(99,164,195,1) 49%, rgba(160,155,212,1) 100%) border-box;
+    border-radius: 1.25rem;
+    border: 4px solid transparent;
+    width: 400px;
 }
 
 .box > div > h3{
@@ -33,4 +60,46 @@ body > div{
     font-size: 1.2rem;
     color: var(--g-color);
     text-align: center;
+}
+
+.btn-gradient-1 {
+    border-width: 4px;
+    border-style: solid;
+    border-image: linear-gradient(to right, darkblue, darkorchid) 1;
+}
+
+.link{
+    text-align: right;
+}
+
+.link a{
+    color: var(--g-color);
+    font-size: 3rem;
+}
+
+.link a:hover{
+    color: rgba(34,193,195,0.5);
+}
+
+@media screen and (max-width: 1023px){
+    .box > div{
+        width: 350px;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 908px){
+    .box{
+        padding: 1rem 0rem;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .box{
+        padding: 1rem;
+        margin-left: 1.5rem;
+        margin-right: 1.5rem;
+    }
+    .box > div{
+        width: 100%;
+    }
 }
